tests/e2e-chainsaw/v1beta2/hostnetwork/redis-cluster/ready-cluster.yaml
---
apiVersion: redis.redis.opstreelabs.in/v1beta2
kind: RedisCluster
metadata:
  name: redis-cluster-v1beta2
status:
  readyFollowerReplicas: 3
  readyLeaderReplicas: 3
