tests/e2e-chainsaw/v1beta2/hostnetwork/redis-cluster/ready-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-leader-0
spec:
  containers:
    - name: redis-cluster-v1beta2-leader
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-leader-1
spec:
  containers:
    - name: redis-cluster-v1beta2-leader
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-leader-2
spec:
  containers:
    - name: redis-cluster-v1beta2-leader
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-follower-0
spec:
  containers:
    - name: redis-cluster-v1beta2-follower
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-follower-1
spec:
  containers:
    - name: redis-cluster-v1beta2-follower
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  name: redis-cluster-v1beta2-follower-2
spec:
  containers:
    - name: redis-cluster-v1beta2-follower
      env:
        - name: PERSISTENCE_ENABLED
          value: 'true'
        - name: REDIS_ADDR
          value: redis://localhost:6379
        - name: REDIS_MAJOR_VERSION
          value: v6
        - name: REDIS_PORT
          value: '6380'
        - name: SERVER_MODE
          value: cluster
        - name: SETUP_MODE
          value: cluster
    - name: redis-exporter
  hostNetwork: true
status:
  phase: Running
